--- a/pandas/2_dataframe_basics/dataframe_basics.ipynb
+++ b/pandas/2_dataframe_basics/dataframe_basics.ipynb
@@ -4,97 +4,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <font color=\"purple\"><h3 align=\"center\">DataFrame Basics Tutorial</h3></font>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## **Dataframe is most commonly used object in pandas. It is a table like datastructure containing rows and columns similar to excel spreadsheet**"
+    "# <font color=\"purple\" ><h3 align=\"center\">DataFrame Basics Tutorial</h3></font>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>day</th>\n",
-       "      <th>temperature</th>\n",
-       "      <th>windspeed</th>\n",
-       "      <th>event</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1/1/2017</td>\n",
-       "      <td>32</td>\n",
-       "      <td>6</td>\n",
-       "      <td>Rain</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1/2/2017</td>\n",
-       "      <td>35</td>\n",
-       "      <td>7</td>\n",
-       "      <td>Sunny</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1/3/2017</td>\n",
-       "      <td>28</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Snow</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1/4/2017</td>\n",
-       "      <td>24</td>\n",
-       "      <td>7</td>\n",
-       "      <td>Snow</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1/5/2017</td>\n",
-       "      <td>32</td>\n",
-       "      <td>4</td>\n",
-       "      <td>Rain</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>1/6/2017</td>\n",
-       "      <td>31</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Sunny</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        day  temperature  windspeed  event\n",
-       "0  1/1/2017           32          6   Rain\n",
-       "1  1/2/2017           35          7  Sunny\n",
-       "2  1/3/2017           28          2   Snow\n",
-       "3  1/4/2017           24          7   Snow\n",
-       "4  1/5/2017           32          4   Rain\n",
-       "5  1/6/2017           31          2  Sunny"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        day  temperature  windspeed  event\n",
+      "0  1/1/2017           32          6   Rain\n",
+      "1  1/2/2017           35          7  Sunny\n",
+      "2  1/3/2017           28          2   Snow\n",
+      "3  1/4/2017           24          7   Snow\n",
+      "4  1/5/2017           32          4   Rain\n",
+      "5  1/6/2017           31          2  Sunny\n",
+      "        day  temperature  windspeed  event\n",
+      "0  1/1/2017           32          6   Rain\n",
+      "1  1/2/2017           35          7  Sunny\n",
+      "2  1/3/2017           28          2   Snow\n",
+      "3  1/4/2017           24          7   Snow\n",
+      "4  1/5/2017           32          4   Rain\n",
+      "5  1/6/2017           31          2  Sunny\n"
+     ]
     }
    ],
    "source": [
@@ -106,15 +42,16 @@
     "    'event': ['Rain', 'Sunny', 'Snow','Snow','Rain', 'Sunny']\n",
     "}\n",
     "df = pd.DataFrame(weather_data)\n",
+    "print(df)\n",
     "df = pd.read_csv(\"weather_data.csv\")\n",
-    "df"
+    "print(df)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -140,216 +77,74 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>day</th>\n",
-       "      <th>temperature</th>\n",
-       "      <th>windspeed</th>\n",
-       "      <th>event</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1/1/2017</td>\n",
-       "      <td>32</td>\n",
-       "      <td>6</td>\n",
-       "      <td>Rain</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1/2/2017</td>\n",
-       "      <td>35</td>\n",
-       "      <td>7</td>\n",
-       "      <td>Sunny</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1/3/2017</td>\n",
-       "      <td>28</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Snow</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1/4/2017</td>\n",
-       "      <td>24</td>\n",
-       "      <td>7</td>\n",
-       "      <td>Snow</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1/5/2017</td>\n",
-       "      <td>32</td>\n",
-       "      <td>4</td>\n",
-       "      <td>Rain</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        day  temperature  windspeed  event\n",
-       "0  1/1/2017           32          6   Rain\n",
-       "1  1/2/2017           35          7  Sunny\n",
-       "2  1/3/2017           28          2   Snow\n",
-       "3  1/4/2017           24          7   Snow\n",
-       "4  1/5/2017           32          4   Rain"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "df.head() # df.head(3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>day</th>\n",
-       "      <th>temperature</th>\n",
-       "      <th>windspeed</th>\n",
-       "      <th>event</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1/2/2017</td>\n",
-       "      <td>35</td>\n",
-       "      <td>7</td>\n",
-       "      <td>Sunny</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1/3/2017</td>\n",
-       "      <td>28</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Snow</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1/4/2017</td>\n",
-       "      <td>24</td>\n",
-       "      <td>7</td>\n",
-       "      <td>Snow</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1/5/2017</td>\n",
-       "      <td>32</td>\n",
-       "      <td>4</td>\n",
-       "      <td>Rain</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>1/6/2017</td>\n",
-       "      <td>31</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Sunny</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        day  temperature  windspeed  event\n",
-       "1  1/2/2017           35          7  Sunny\n",
-       "2  1/3/2017           28          2   Snow\n",
-       "3  1/4/2017           24          7   Snow\n",
-       "4  1/5/2017           32          4   Rain\n",
-       "5  1/6/2017           31          2  Sunny"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.tail() # df.tail(2)"
+    "## **Dataframe is most commonly used object in pandas. It is a table like datastructure containing rows and columns similar to excel spreadsheet**"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>day</th>\n",
-       "      <th>temperature</th>\n",
-       "      <th>windspeed</th>\n",
-       "      <th>event</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1/2/2017</td>\n",
-       "      <td>35</td>\n",
-       "      <td>7</td>\n",
-       "      <td>Sunny</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1/3/2017</td>\n",
-       "      <td>28</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Snow</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        day  temperature  windspeed  event\n",
-       "1  1/2/2017           35          7  Sunny\n",
-       "2  1/3/2017           28          2   Snow"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        day  temperature  windspeed  event\n",
+      "0  1/1/2017           32          6   Rain\n",
+      "1  1/2/2017           35          7  Sunny\n",
+      "2  1/3/2017           28          2   Snow\n",
+      "3  1/4/2017           24          7   Snow\n"
+     ]
     }
    ],
    "source": [
-    "df[1:3]"
+    "df_last_minus_2 = df.head(-2) \n",
+    "print(df_last_minus_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        day  temperature  windspeed  event\n",
+      "2  1/3/2017           28          2   Snow\n",
+      "3  1/4/2017           24          7   Snow\n",
+      "4  1/5/2017           32          4   Rain\n",
+      "5  1/6/2017           31          2  Sunny\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_start_minus_2 = df.tail(-2) \n",
+    "print(df_start_minus_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        day  temperature  windspeed  event\n",
+      "1  1/2/2017           35          7  Sunny\n",
+      "2  1/3/2017           28          2   Snow\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_1_3 = df[1:3]\n",
+    "print(df_1_3)"
    ]
   },
   {
@@ -362,9 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -384,9 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -412,9 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -434,9 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -514,9 +301,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -536,9 +321,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -583,9 +366,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -606,9 +387,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -653,9 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -675,9 +452,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -697,9 +472,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -797,9 +570,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -895,9 +666,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -982,9 +751,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1004,9 +771,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1029,9 +794,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1109,9 +872,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1197,9 +958,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1257,9 +1016,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda root]",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-root-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1271,7 +1030,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
